# Structured-Programming

./: CMakeLists.txt  README.md
LaboratoriskiVezhbi/LV1/: Apoeni.c  ChitanjeDvaBroja.c  ProsechnaOcenka.c
LaboratoriskiVezhbi/LV10/: RelativnaFrekvencija.c  TransformNiza.c  ZnakCKpati.c
LaboratoriskiVezhbi/LV3/: Kolega.c  Struja.c  TikTak.c
LaboratoriskiVezhbi/LV5/: MorzeovaAzbuka.c  Pravoagolnik.c  Vreme.c
LaboratoriskiVezhbi/LV7/: GlavnaDijagonala.c  MinMax.c  ZdiplenaMatrica.c
LaboratoriskiVezhbi/LV8/: StrogoRastechki.c  TransformRekurzija.c  byK.c
LaboratoriskiVezhbi/LV9/: SkaliranjePoeni.c  Sort.c  Triagolnik.c
PrvKolokvium/: BlagBroj.c  CikCak.c  CikCak2.c  GrupaStudenti.c  InteresenBroj.c  KvadratnaSlika.c  ParenEkvivalenten.c  ParoviBroevi.c  PolnPogodok.c  PozicijaCifra.c  SkrieniBroevi.c  StudentiPoeni.c  SumCifri.c  SumDeliteli.c  TotalnoRazlichen.c
VtorKolokvium/: BrCifriRed.c  DijagonaliMatrica.c  Livche.c  MaxCifra.c  NajdolgRed.c  NajoddalechenAVG.c  NajznachajnaCifra.c  NeprekinataDropka.c  Podnizi.c  PoramnetBroj.c  PozitivniBroevi.c  RediciMatrica.c  SosedniSamoglaski.c  SredenElementMatrica.c  SumKvadranti.c  SumPos.c  TransformiranaMatrica.c  TriPosledovatelni.c
