cmake_minimum_required(VERSION 3.30)
project(SP2022 C)

set(CMAKE_C_STANDARD 23)

add_executable(SP2022
        PrvKolokvium/BlagBroj.c
        PrvKolokvium/InteresenBroj.c
        PrvKolokvium/SumDeliteli.c
        PrvKolokvium/SkrieniBroevi.c
        PrvKolokvium/ParenEkvivalenten.c
        PrvKolokvium/ParoviBroevi.c
        PrvKolokvium/KvadratnaSlika.c
        PrvKolokvium/TotalnoRazlichen.c
        PrvKolokvium/PolnPogodok.c
        PrvKolokvium/CikCak.c
        PrvKolokvium/CikCak2.c
        PrvKolokvium/PozicijaCifra.c
        PrvKolokvium/GrupaStudenti.c
        PrvKolokvium/SumCifri.c
        PrvKolokvium/StudentiPoeni.c
        VtorKolokvium/SosedniSamoglaski.c
        VtorKolokvium/NajznachajnaCifra.c
        VtorKolokvium/SumPos.c
        VtorKolokvium/SumKvadranti.c
        VtorKolokvium/Livche.c
        VtorKolokvium/TriPosledovatelni.c
        VtorKolokvium/NajoddalechenAVG.c
        VtorKolokvium/NajdolgRed.c
        VtorKolokvium/NeprekinataDropka.c
        VtorKolokvium/Podnizi.c
        VtorKolokvium/BrCifriRed.c
        VtorKolokvium/PozitivniBroevi.c
        VtorKolokvium/RediciMatrica.c
        VtorKolokvium/TransformiranaMatrica.c
        VtorKolokvium/PoramnetBroj.c
        VtorKolokvium/MaxCifra.c
        VtorKolokvium/SredenElementMatrica.c
        VtorKolokvium/DijagonaliMatrica.c
        LaboratoriskiVezhbi/LV8/byK.c
        LaboratoriskiVezhbi/LV1/ChitanjeDvaBroja.c
        LaboratoriskiVezhbi/LV1/Apoeni.c
        LaboratoriskiVezhbi/LV1/ProsechnaOcenka.c
        LaboratoriskiVezhbi/LV3/TikTak.c
        LaboratoriskiVezhbi/LV3/Kolega.c
        LaboratoriskiVezhbi/LV3/Struja.c
        LaboratoriskiVezhbi/LV5/MorzeovaAzbuka.c
        LaboratoriskiVezhbi/LV5/Pravoagolnik.c
        LaboratoriskiVezhbi/LV5/Vreme.c
        LaboratoriskiVezhbi/LV7/GlavnaDijagonala.c
        LaboratoriskiVezhbi/LV7/MinMax.c
        LaboratoriskiVezhbi/LV7/ZdiplenaMatrica.c
        LaboratoriskiVezhbi/LV8/TransformRekurzija.c
        LaboratoriskiVezhbi/LV8/StrogoRastechki.c
        LaboratoriskiVezhbi/LV9/Sort.c
        LaboratoriskiVezhbi/LV9/SkaliranjePoeni.c
        LaboratoriskiVezhbi/LV9/Triagolnik.c
        LaboratoriskiVezhbi/LV10/TransformNiza.c
        LaboratoriskiVezhbi/LV10/ZnakCKpati.c
        LaboratoriskiVezhbi/LV10/RelativnaFrekvencija.c
)
